fixed gitlink alignment

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ h1 {
   text-align: center;
 }
 .gitlink {
-  margin-left: 375px;
+  text-align: center;
   color: #c6bfbf;
   font-variant: small-caps;
 }
